--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -114,3 +114,8 @@ mark_shoufashanghaizengjia: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-reso
 mark_xueruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3042.png'
 mark_xuruoshuipao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3041.png'
 mark_guanghua: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3023.png'
+mark_aideminyi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3057.png'
+mark_shiyanzhiyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3058.png'
+mark_huifu_1_16: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3018.png'
+mark_xinlingzhiyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3059.png'
+mark_jingyangshengxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3190.png'
