--- a/data/effect_mark.yaml
+++ b/data/effect_mark.yaml
@@ -1205,6 +1205,26 @@
             - type: multiply
               arg: 30
       percent: 0
+# 1/16恢复：回合结束时恢复自身最大体力的1/16
+- id: effect_mark_heal_self_1_16_turnEnd
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    - type: heal
+      target: self
+      value:
+        type: dynamic
+        selector:
+          base: self
+          chain:
+            - type: select
+              arg:
+                type: base
+                arg: maxHp
+            - type: divide
+              arg: 16
 # 血红印记：回合结束时对持有者造成最大体力1/8的伤害
 - id: effect_mark_xuehongyinji_damage_on_turn_end
   trigger: TurnEnd
@@ -1225,6 +1245,72 @@
             arg: 8
   condition:
     type: checkSelf
+# 爱的名义：使自身所有技能必中
+- id: effect_mark_skill_sure_hit
+  trigger: BeforeUseSkillCheck
+  priority: 0
+  condition:
+    type: checkSelf
+  apply:
+    type: setSureHit
+    target: usingSkillContext
+    priority: 1
+# 誓言之约：结束时恢复自身所有体力
+- id: effect_mark_heal_all_hp_on_expire
+  trigger: OnMarkDurationEnd
+  priority: 0
+  apply:
+    type: heal
+    target: self
+    value:
+      type: dynamic
+      selector:
+        base: self
+        chain:
+          - type: select
+            arg:
+              type: base
+              arg: maxHp
+# 心灵制约：每次获得怒气不超过y点
+- id: effect_mark_limit_rage_gain
+  trigger: OnRageGain
+  priority: 0
+  condition:
+    type: checkSelf
+  apply:
+    type: setValue
+    target:
+      base: rageContext
+      chain:
+        - type: selectProp
+          arg: rageChangeResult
+    value:
+      type: dynamic
+      selector:
+        base: rageContext
+        chain:
+          - type: selectPath
+            arg: rageChangeResult
+          - type: clampMax
+            arg:
+              type: dynamic
+              selector:
+                base: mark
+                chain:
+                  - type: select
+                    arg:
+                      type: base
+                      arg: stack
+# 静养生息：回合结束时增加10点怒气
+- id: effect_mark_add_rage_10_turnEnd
+  trigger: TurnEnd
+  condition:
+    type: petIsActive
+  priority: 0
+  apply:
+    type: addRage
+    target: self
+    value: 10
 # 反弹印记：反弹受到伤害的25%
 - id: effect_mark_fantan_reflect_damage
   trigger: OnDamage
