--- a/resource/mark_image.yaml
+++ b/resource/mark_image.yaml
@@ -119,3 +119,5 @@ mark_shiyanzhiyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main
 mark_huifu_1_16: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3018.png'
 mark_xinlingzhiyue: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3059.png'
 mark_jingyangshengxi: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3190.png'
+mark_zhunbeidongzuo: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3055.png'
+mark_lingqiao: 'https://cdn.jsdelivr.net/gh/arcadia-star/seer2-resource@main/png/markImage/3056.png'
