--- a/data/skill.yaml
+++ b/data/skill.yaml
@@ -2998,6 +2998,7 @@
   effect:
     - effect_skill_ignite_foe_mark_shaoshang
   tags: []
+
 - id: skill_xueruoshuipao
   element: Water
   category: Special
@@ -3533,3 +3534,169 @@
   effect:
     - effect_skill_clear_status
   tags: []
+- id: skill_quanji
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 40
+  rage: 0
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_reduce_foe_def_1_stage_5_percent
+- id: skill_zhunbeidongzuo
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_zhunbeidongzuo
+- id: skill_xiagouquan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_power_2x_if_height_greater_than_foe
+- id: skill_zuobaiquan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_power_2x_if_height_above_100
+- id: skill_lingqiao
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 25
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_lingqiao
+- id: skill_shanggouquan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 55
+  rage: 15
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_power_2x_if_height_less_than_foe
+- id: skill_youbaiquan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 110
+  rage: 20
+  accuracy: 60
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_sure_hit_if_height_above_100
+- id: skill_fanjidongzuo
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_add_mark_fantan
+- id: skill_shangxiazuoyouquan
+  element: Normal
+  category: Climax
+  target: opponent
+  power: 160
+  rage: 100
+  accuracy: 100
+  sureHit: true
+  ignoreShield: false
+  tags: ['quan']
+- id: skill_xiaxiaxiagouquan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 45
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_multihit_if_height_greater_than_foe
+- id: skill_zuozuozuobaiquan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 45
+  rage: 20
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_multihit_if_height_above_100
+- id: skill_shangshangshanggouquan
+  element: Normal
+  category: Physical
+  target: opponent
+  power: 45
+  rage: 20
+  accuracy: 95
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_multihit_if_height_less_than_foe
+- id: skill_youyouyoubaiquan
+  element: Normal
+  category: Special
+  target: opponent
+  power: 135
+  rage: 25
+  accuracy: 90
+  sureHit: false
+  ignoreShield: false
+  tags: ['quan']
+  effect:
+    - effect_skill_sure_hit_if_height_above_100
+- id: skill_yili
+  element: Normal
+  category: Status
+  target: self
+  power: 0
+  rage: 10
+  accuracy: 100
+  sureHit: false
+  ignoreShield: false
+  tags: []
+  effect:
+    - effect_skill_raise_atk_1_stages
